Adicionei duas fotos, e modifiquei o index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<header>
-		<h1>Olá Mundo!</h1>
+		<h1>MemoryMate</h1>
 	</header>
 	<main>
 		<div class="album">
 			<!-- Aqui serão exibidas as fotos -->
-			<img src="foto1.jpg" alt="Descrição da foto 1">
-			<img src="foto2.jpg" alt="Descrição da foto 2">
+			<img src="img/Tiroleza Dalva.png" alt="Tiroleza no teleférico Unipraias">
+			<img src="img/Tiroleza Guilherme.png" alt="Tiroleza no teleférico Unipraias">
 			<!-- Adicione mais fotos conforme necessário -->
 		</div>
 	</main>
